Try something else

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -369,7 +369,7 @@ Resources:
         Cooldown: 300
         MetricAggregationType: Average
         StepAdjustments:
-        - MetricIntervalUpperBound: 15
+        - MetricIntervalUpperBound: 0
           ScalingAdjustment: -1
   DovetailAutoScalingInAlarm:
     Type: "AWS::CloudWatch::Alarm"
@@ -406,7 +406,10 @@ Resources:
         Cooldown: 120
         MetricAggregationType: Average
         StepAdjustments:
-        - MetricIntervalLowerBound: 50
+        - MetricIntervalLowerBound: -10
+          MetricIntervalUpperBound: 0
+          ScalingAdjustment: 1
+        - MetricIntervalLowerBound: 0
           ScalingAdjustment: 2
   DovetailAutoScalingOutAlarm:
     Type: "AWS::CloudWatch::Alarm"
