Try changing alarm names

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -376,7 +376,7 @@ Resources:
     Condition: CreateStagingResources
     Properties:
       ActionsEnabled: true
-      AlarmName: Dovetail Low CPU Usage
+      AlarmName: !If [CreateProductionResources, "Dovetail Prod Low CPU Usage", "Dovetail Staging Low CPU Usage"]
       AlarmActions:
         - !Ref DovetailAutoScalingInPolicy
       AlarmDescription: >
@@ -416,7 +416,7 @@ Resources:
     Condition: CreateStagingResources
     Properties:
       ActionsEnabled: true
-      AlarmName: Dovetail High CPU Usage
+      AlarmName: !If [CreateProductionResources, "Dovetail Prod High CPU Usage", "Dovetail Staging High CPU Usage"]
       AlarmActions:
         - !Ref DovetailAutoScalingOutPolicy
       AlarmDescription: >
