Terminate non-ecs-connected instances

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -616,6 +616,8 @@ Resources:
               - Effect: "Allow"
                 Resource: "*"
                 Action:
+                  - ec2:DescribeInstances
+                  - ec2:TerminateInstances
                   - ecs:DescribeContainerInstances
                   - ecs:DescribeServices
                   - ecs:DescribeTaskDefinition
