Rename notification stack parameter

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -14,7 +14,7 @@ Metadata:
           default: Stack Dependencies
         Parameters:
           - InfrastructureStorageStackName
-          - NotificationsStackName
+          - InfrastructureNotificationsStackName
       - Label:
           default: Template Configuration
         Parameters:
@@ -31,7 +31,7 @@ Metadata:
     ParameterLabels:
       InfrastructureStorageStackName:
         default: Storage stack name
-      NotificationsStackName:
+      InfrastructureNotificationsStackName:
         default: Notifications stack name
       InfrastructureConfigStagingKey:
         default: Staging S3 object key
@@ -46,7 +46,7 @@ Parameters:
     Default: infrastructure-storage
     Description: The name of a previously launched infrastructure storage stack
     Type: String
-  NotificationsStackName:
+  InfrastructureNotificationsStackName:
     Default: infrastructure-notifications
     Description: The name of a previously launched notifications stack
     Type: String
@@ -338,7 +338,7 @@ Resources:
                   - "sns:Publish"
                 Resource:
                   - Fn::ImportValue:
-                      !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
+                      !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
   CiStatusNotificationHandlerLambdaFunction:
@@ -355,7 +355,7 @@ Resources:
         Variables:
           SLACK_MESSAGE_RELAY_TOPIC_ARN:
             Fn::ImportValue:
-                !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
+                !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt CiStatusNotificationHandlerIamRole.Arn
@@ -384,13 +384,13 @@ Resources:
       AlarmName: CI status notifications handler Lambda Errors
       AlarmActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >
         The error rate on the CI status notifications handler lambda has
         exceeded 0 in the last minute.
@@ -473,13 +473,13 @@ Resources:
       AlarmName: GitHub Webhook Endpoint Lambda Errors
       AlarmActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >
         The error rate on the GitHub webhook endpoint lambda has exceeded 0 in
         the last five minutes.
@@ -614,13 +614,13 @@ Resources:
       AlarmName: GitHub Event Handler Lambda Errors
       AlarmActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >
         The error rate on the GitHub event handler lambda has exceeded 0 in
         the last five minutes.
@@ -681,13 +681,13 @@ Resources:
       AlarmName: GitHub Event Handler2 Lambda Errors
       AlarmActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >
         The error rate on the GitHub event handler2 lambda has exceeded 0 in
         the last five minutes.
@@ -785,13 +785,13 @@ Resources:
       AlarmName: CodeBuild Callback Handler Lambda Errors
       AlarmActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       InsufficientDataActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       OKActions:
         - Fn::ImportValue:
-            !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+            !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
       AlarmDescription: >
         The error rate on the CodeBuild callback handler lambda has exceeded 0
         in the last five minutes.
