Pass application code bucket to CI build project

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -198,6 +198,10 @@ Resources:
             Value: !Ref CodeBuildCallbackSnsTopic
           - Name: PRX_AWS_ACCOUNT_ID
             Value: !Ref AWS::AccountId
+          - Name: PRX_APPLICATION_CODE_BUCKET
+            Value:
+              Fn::ImportValue:
+                !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
         Image: "aws/codebuild/docker:1.12.1"
         Type: LINUX_CONTAINER
       # NOTE If Name changes, the CodeBuild Role Logs policy also must change
