--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -1,4 +1,4 @@
-# This stack should generally only be launched once globally, and be named: ci
+# This stack should generally only be launched once globally
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a continuous integration system to handle testing, building, and
