Rename notification CloudWatch alarms

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -161,7 +161,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: Slack Messgage Relay Lambda Errors
+      AlarmName: "[Infra][Notif][Lambda][Errors] Slack Message Relay"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopic
       InsufficientDataActions:
@@ -223,7 +223,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: CloudFormation notifications handler Lambda Errors
+      AlarmName: "[Infra][Notif][Lambda][Errors] CloudFormation Notifications Handler"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopic
       InsufficientDataActions:
@@ -285,7 +285,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: ASG notifications handler Lambda Errors
+      AlarmName: "[Infra][Notif][Lambda][Errors] ASG Notifications Handler"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopic
       InsufficientDataActions:
@@ -405,7 +405,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: Ike Callback Handler Lambda Errors
+      AlarmName: "[Infra][Notif][Lambda][Errors] Ike Callback Handler"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopic
       InsufficientDataActions:
@@ -430,7 +430,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: Ike Slash Commands Lambda Errors
+      AlarmName: "[Infra][Notif][Lambda][Errors] Ike Slack Commands Handler"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopic
       InsufficientDataActions:
