--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -306,6 +306,118 @@ Resources:
       Dimensions:
         - Name: FunctionName
           Value: !Ref ASGNotificationHandlerLambdaFunction
+  # CloudWatch Alarms Notifications
+  CloudWatchAlarmNotificationHandlerLambdaFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
+        S3Key: "notifications/cloudwatch-alarm-notification-handler.zip"
+      Description: >
+        Handles notifications from CloudWatch Alarms
+      Environment:
+        Variables:
+          SLACK_MESSAGE_RELAY_TOPIC_ARN: !Ref SlackMessageRelaySnsTopic
+      Handler: index.handler
+      MemorySize: 128
+      Role: !GetAtt LambdaBasicExecutionIamRole.Arn
+      Runtime: nodejs6.10
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+      Timeout: 10
+  CloudWatchAlarmNotificationHandlerErrorAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmName: "[Infra][Notif][Lambda][Errors] CloudWatch Alarms Handler"
+      AlarmActions:
+        - !Ref OpsWarnMessagesSnsTopic
+      InsufficientDataActions:
+        - !Ref OpsWarnMessagesSnsTopic
+      OKActions:
+        - !Ref OpsWarnMessagesSnsTopic
+      AlarmDescription: >
+        The error rate on the CloudWatch Alarms notifications handler lambda has
+        exceeded 0 in the last minute.
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: "60"
+      Statistic: Sum
+      Threshold: "0"
+      TreatMissingData: notBreaching
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref CloudWatchAlarmNotificationHandlerLambdaFunction
+  CloudWatchAlarmNotificationHandlerDebugSubscription:
+    Type: "AWS::SNS::Subscription"
+    Properties:
+      Endpoint: !GetAtt CloudWatchAlarmNotificationHandlerLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn: !Ref OpsDebugMessagesSnsTopic
+  CloudWatchAlarmNotificationHandlerDebugPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref CloudWatchAlarmNotificationHandlerLambdaFunction
+      Principal: sns.amazonaws.com
+      SourceArn: !Ref OpsDebugMessagesSnsTopic
+  CloudWatchAlarmNotificationHandlerInfoSubscription:
+    Type: "AWS::SNS::Subscription"
+    Properties:
+      Endpoint: !GetAtt CloudWatchAlarmNotificationHandlerLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn: !Ref OpsInfoMessagesSnsTopic
+  CloudWatchAlarmNotificationHandlerInfoPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref CloudWatchAlarmNotificationHandlerLambdaFunction
+      Principal: sns.amazonaws.com
+      SourceArn: !Ref OpsInfoMessagesSnsTopic
+  CloudWatchAlarmNotificationHandlerWarnSubscription:
+    Type: "AWS::SNS::Subscription"
+    Properties:
+      Endpoint: !GetAtt CloudWatchAlarmNotificationHandlerLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn: !Ref OpsWarnMessagesSnsTopic
+  CloudWatchAlarmNotificationHandlerWarnPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref CloudWatchAlarmNotificationHandlerLambdaFunction
+      Principal: sns.amazonaws.com
+      SourceArn: !Ref OpsWarnMessagesSnsTopic
+  CloudWatchAlarmNotificationHandlerErrorSubscription:
+    Type: "AWS::SNS::Subscription"
+    Properties:
+      Endpoint: !GetAtt CloudWatchAlarmNotificationHandlerLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn: !Ref OpsErrorMessagesSnsTopic
+  CloudWatchAlarmNotificationHandlerErrorPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref CloudWatchAlarmNotificationHandlerLambdaFunction
+      Principal: sns.amazonaws.com
+      SourceArn: !Ref OpsErrorMessagesSnsTopic
+  CloudWatchAlarmNotificationHandlerFatalSubscription:
+    Type: "AWS::SNS::Subscription"
+    Properties:
+      Endpoint: !GetAtt CloudWatchAlarmNotificationHandlerLambdaFunction.Arn
+      Protocol: lambda
+      TopicArn: !Ref OpsFatalMessagesSnsTopic
+  CloudWatchAlarmNotificationHandlerFatalPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref CloudWatchAlarmNotificationHandlerLambdaFunction
+      Principal: sns.amazonaws.com
+      SourceArn: !Ref OpsFatalMessagesSnsTopic
   # Ike
   IkeHandlerLambdaIamRole:
     Type: "AWS::IAM::Role"
