--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -293,7 +293,7 @@ Resources:
       OKActions:
         - !Ref OpsWarnMessagesSnsTopic
       AlarmDescription: >
-        The error rate on the ASG notifications hander lambda has
+        The error rate on the ASG notifications handler lambda has
         exceeded 0 in the last minute.
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: "1"
