Clean up notifications template parameters

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -56,19 +56,21 @@ Parameters:
       The S3 object key for the staging template configuration file archive
       (.zip), inside the InfrastructureConfigBucket
     Type: String
-  AutoScalingSlackWebhookUrl:
-    Type: String
   CloudWatchSlackWebhookUrl:
     Type: String
   CloudFormationSlackWebhookUrl:
+    # TODO This is turning into the generic webhook
     Type: String
   CodePipelineSlackWebhookUrl:
-    Type: String
-  CodeBuildSlackWebhookUrl:
     Type: String
   IkeDeploysSlackSlackWebhookUrl:
     Type: String
   IkeSlackVerificationToken:
+    Type: String
+  # Deprecated
+  AutoScalingSlackWebhookUrl:
+    Type: String
+  CodeBuildSlackWebhookUrl:
     Type: String
 Resources:
   # Shared IAM Roles
