Clean up CloudWatch alarm names for CI

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -385,7 +385,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: CI status notifications handler Lambda Errors
+      AlarmName: "[Infra][CI][Lambda][Errors] CI Status Handler"
       AlarmActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
@@ -474,7 +474,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: GitHub Webhook Endpoint Lambda Errors
+      AlarmName: "[Infra][CI][Lambda][Errors] GitHub Webhook Endpoint"
       AlarmActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
@@ -608,7 +608,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: GitHub Event Handler Lambda Errors
+      AlarmName: "[Infra][CI][Lambda][Errors] GitHub Event Handler"
       AlarmActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
@@ -675,7 +675,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: GitHub Event Handler2 Lambda Errors
+      AlarmName: "[Infra][CI][Lambda][Errors] GitHub Event Handler v2"
       AlarmActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
@@ -779,7 +779,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: CodeBuild Callback Handler Lambda Errors
+      AlarmName: "[Infra][CI][Lambda][Errors] CodeBuild Callback Handler"
       AlarmActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
