Clean up CloudWatch alarm names for Secrets stack

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -186,7 +186,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: Secrets S3 Update Lambda Errors
+      AlarmName: "[Infra][Secr][Lambda][Errors] S3 Config Update"
       AlarmActions:
         - Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
