Get ASG launch errors off CloudWatch Alarms topics

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -454,7 +454,10 @@ Resources:
             - "autoscaling:EC2_INSTANCE_LAUNCH"
             - "autoscaling:EC2_INSTANCE_TERMINATE"
             - "autoscaling:TEST_NOTIFICATION"
-        - TopicARN: !Ref OpsErrorMessagesSnsTopicArn
+        - TopicARN:
+            # TODO These should be treated as errors
+            Fn::ImportValue:
+                !Sub ${NotificationsStackName}-ASGNotificationSnsTopic
           NotificationTypes:
             - "autoscaling:EC2_INSTANCE_LAUNCH_ERROR"
             - "autoscaling:EC2_INSTANCE_TERMINATE_ERROR"
