Format Dovetail CloudWatch alarm names

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -150,7 +150,7 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: Dovetail Server 5XXs
+      AlarmName: "[Dovetail][ALB][Error] Target 5XX"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
@@ -175,7 +175,7 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: Dovetail Load Balancer 5XXs
+      AlarmName: "[Dovetail][ALB][Error] LB 5XX"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
@@ -365,11 +365,11 @@ Resources:
         StepAdjustments:
         - MetricIntervalUpperBound: 0
           ScalingAdjustment: -1
-  DovetailAutoScalingInAlarm:
+  DovetailAutoScalingScaleInAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !If [CreateProductionResources, "Dovetail Prod Low CPU Usage", "Dovetail Staging Low CPU Usage"]
+      AlarmName: !If [CreateProductionResources, "[Dovetail][AS:In] Production Low CPU Usage", "[Dovetail][AS:In] Staging Low CPU Usage"]
       AlarmActions:
         - !Ref DovetailAutoScalingInPolicy
       AlarmDescription: >
@@ -403,11 +403,11 @@ Resources:
           ScalingAdjustment: 1
         - MetricIntervalLowerBound: 5
           ScalingAdjustment: 2
-  DovetailAutoScalingOutAlarm:
+  DovetailAutoScalingScaleOutAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: !If [CreateProductionResources, "Dovetail Prod High CPU Usage", "Dovetail Staging High CPU Usage"]
+      AlarmName: !If [CreateProductionResources, "[Dovetail][AS:Out] Production High CPU Usage", "[Dovetail][AS:Out] Staging High CPU Usage"]
       AlarmActions:
         - !Ref DovetailAutoScalingOutPolicy
       AlarmDescription: >
