Fix acceptance project policy

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -694,8 +694,8 @@ Resources:
                 Resource:
                   # NOTE These need to stay in sync with the CodeBuild Project
                   # name from below
-                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-Acceptance
-                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-Acceptance:*
+                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-AcceptanceTests
+                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-AcceptanceTests:*
         # CodeBuild sources from CodePipeline artifacts, so it needs access
         - PolicyName: ArtifactStoreBasicAccess
           PolicyDocument:
