Fix CD fail function policy

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -102,6 +102,16 @@ Resources:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       Path: "/"
       Policies:
+        - PolicyName: SnsPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "sns:Publish"
+                Resource:
+                  - Fn::ImportValue:
+                      !Sub "${NotificationsStackName}-SlackMessageRelaySnsTopicArn"
         - PolicyName: CodePipelinePolicy
           PolicyDocument:
             Version: "2012-10-17"
