Pass Slack Message Relay topic to deploy notifications Lambda

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -949,7 +949,9 @@ Resources:
         Sends a message when deployments finish
       Environment:
         Variables:
-          DEPLOY_NOTIFICATION_TOPIC_ARN: !Ref DeployNotificationsSnsTopic
+          SLACK_MESSAGE_RELAY_TOPIC_ARN:
+            Fn::ImportValue:
+                !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
           CD_STACK_NAME: !Ref AWS::StackName
           INFRASTRUCTURE_CONFIG_BUCKET:
             Fn::ImportValue:
