--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -50,18 +50,6 @@ Parameters:
     Type: String
   IkeSlackVerificationToken:
     Type: String
-  # Deprecated
-  AutoScalingSlackWebhookUrl:
-    Type: String
-  CodeBuildSlackWebhookUrl:
-    Type: String
-  CodePipelineSlackWebhookUrl:
-    Type: String
-  CloudWatchSlackWebhookUrl:
-    Type: String
-  CloudFormationSlackWebhookUrl:
-    # TODO This is turning into the generic webhook
-    Type: String
 Resources:
   # Shared IAM Roles
   LambdaBasicExecutionIamRole:
@@ -629,10 +617,12 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${IkeCallbackHandlerLambdaFunction.Arn}/invocations
 Outputs:
+  # Slack relay topic used by many other notification handlers
   SlackMessageRelaySnsTopicArn:
     Value: !Ref SlackMessageRelaySnsTopic
     Export:
       Name: !Sub ${AWS::StackName}-SlackMessageRelaySnsTopicArn
+  # Log-level topics used by CloudWatch Alarms
   OpsDebugMessagesSnsTopicArn:
     Value: !Ref OpsDebugMessagesSnsTopic
     Export:
@@ -653,6 +643,7 @@ Outputs:
     Value: !Ref OpsFatalMessagesSnsTopic
     Export:
       Name: !Sub ${AWS::StackName}-OpsFatalMessagesSnsTopicArn
+  # Service-specific notification handler topics
   CloudFormationNotificationSnsTopic:
     Value: !Ref CloudFormationNotificationSnsTopic
     Export:
@@ -661,14 +652,11 @@ Outputs:
     Value: !Ref ASGNotificationSnsTopic
     Export:
       Name: !Sub ${AWS::StackName}-ASGNotificationSnsTopic
+  # Ike Slack App
   IkeCodePipelineApprovalHandlerCallbackUrl:
     Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${RestApiStage}/ike/codepipeline/approval"
   IkeSlashCommandsHandlerCallbackUrl:
     Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${RestApiStage}/ike/slash-commands"
-  CodePipelineSlackWebhookUrl:
-    Value: !Ref CodePipelineSlackWebhookUrl
-    Export:
-      Name: !Sub ${AWS::StackName}-CodePipelineSlackWebhookUrl
   IkeDeploysSlackSlackWebhookUrl:
     Value: !Ref IkeDeploysSlackSlackWebhookUrl
     Export:
