--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -116,7 +116,6 @@ Resources:
                   - "codepipeline:GetPipelineState"
                 Resource: "*"
   CodePipelineFailurePollerFunction:
-    # TODO Send slack message directly to the Slack Message Relay topic
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
@@ -213,7 +212,7 @@ Resources:
           Value: !Ref CodePipelineFailurePollerFunction
   # CodePipeline Approvals
   # Production changeset deploys are behind a manual approval action. That
-  # action publishes a message to this SNS topic, of which the Lambda function
+  # action publishes a message to this SNS topic, of which this Lambda function
   # is a subscriber. The function generates an interactive Slack message to
   # facilitate the approval.
   CodePipelineApprovalsSnsTopic:
