Clean up CloudWatch alarm names

--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -160,7 +160,7 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub ${AppName} Server 5XXs
+      AlarmName: !Sub "[${AppName}][ALB][Error] Target 5XX"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
@@ -185,7 +185,7 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub ${AppName} Load Balancer 5XXs
+      AlarmName: !Sub "[${AppName}][ALB][Error] LB 5XX"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
