--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -262,7 +262,7 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: Play ALB Target Group HTTP 5XXs
+      AlarmName: "[Play][ALB][Error] Target 5XX"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
