--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -173,7 +173,7 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: Publish ALB Target Group HTTP 5XXs
+      AlarmName: "[Publish][ALB][Error] Target 5XX"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
