--- a/stacks/web-application.yml
+++ b/stacks/web-application.yml
@@ -126,7 +126,7 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub ${AppName} ALB Target Group HTTP 5XXs
+      AlarmName: !Sub "[${AppName}][ALB][Error] Target 5XX"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
