Remove nested stack notification ARN

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -251,9 +251,9 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
     Properties:
-      NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
+      # NotificationARNs:
+      #   - Fn::ImportValue:
+      #       !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         PlatformALBDefaultTargetGroupArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBDefaultTargetGroupArn
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
