Give codebuild secrets access/decrypt

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -154,6 +154,9 @@ Resources:
                   - "ecr:PutImage"
                 Resource:
                   - !Sub "arn:aws:ecr:us-east-1:${AWS::AccountId}:repository/*"
+      ManagedPolicyArns:
+        - !Sub "arn:aws:iam::${AWS::AccountId}:policy/key-prx-infrastructure-${AWS::Region}-secrets-instance-access-policy"
+        - !Sub "arn:aws:iam::${AWS::AccountId}:policy/key-prx-infrastructure-${AWS::Region}-secrets-instance-decrypt-policy"
   CodeBuildProject:
     Type: "AWS::CodeBuild::Project"
     Properties:
