Add Slack Relay topic to CodeBuild Callback

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -775,6 +775,9 @@ Resources:
         Variables:
           CI_STATUS_TOPIC_ARN: !Ref CiStatusSnsTopic
           GITHUB_ACCESS_TOKEN: !Ref GitHubToken
+          SLACK_MESSAGE_RELAY_TOPIC_ARN:
+            Fn::ImportValue:
+                !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
           INFRASTRUCTURE_CONFIG_BUCKET:
             Fn::ImportValue:
               !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
