Update CloudWatch Alarm handler to include historical data

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -300,10 +300,10 @@ Resources:
       Environment:
         Variables:
           SLACK_MESSAGE_RELAY_TOPIC_ARN: !Ref SlackMessageRelaySnsTopic
-      Handler: index.handler
-      MemorySize: 128
+      Handler: lamda_function.lambda_handler
+      MemorySize: 192
       Role: !GetAtt LambdaBasicExecutionIamRole.Arn
-      Runtime: nodejs6.10
+      Runtime: python3.6
       Tags:
         - Key: Project
           Value: Infrastructure
